# Proof-of-Concept

./: .gitignore  README.md  eduvision-windows.bat  generate_photos.py  make_photos.py  predict.py  predict.spec  predict_cloud.py  pyproject.toml  train.py
.github/workflows/: build-windows.yml
app/: app.py  detection.py
